--- a/LF_lastminute/Lastminute.com Group - DataLab Demo.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo.ipynb
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 80,
    "metadata": {
     "collapsed": false
    },
@@ -340,23 +340,300 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1396</th>\n",
+       "      <td>flight to London</td>\n",
+       "      <td>Phrase</td>\n",
+       "      <td>[\"http://www.bravofly.com/vg1/home.do?arrivalA...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>135151</th>\n",
+       "      <td>+belfast +flight +and +hotel</td>\n",
+       "      <td>Broad</td>\n",
+       "      <td>[\"http://www.lastminute.com/city-breaks/belfas...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>136340</th>\n",
+       "      <td>+flight +to +Stansted</td>\n",
+       "      <td>Broad</td>\n",
+       "      <td>[\"http://www.lastminute.com/flights/search-for...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>136727</th>\n",
+       "      <td>+vuelos +last +minute</td>\n",
+       "      <td>Broad</td>\n",
+       "      <td>[\"http://www.es.lastminute.com/vuelos/?COBRAND...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>136763</th>\n",
+       "      <td>+train +Bourg St Maurice</td>\n",
+       "      <td>Broad</td>\n",
+       "      <td>[\"http://www.lastminute.com/city-breaks/eurost...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>137444</th>\n",
+       "      <td>bravo fly com</td>\n",
+       "      <td>Exact</td>\n",
+       "      <td>[\"http://www.bravofly.com/vg1/flights.do?COBRA...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>137702</th>\n",
+       "      <td>city trip last minute</td>\n",
+       "      <td>Exact</td>\n",
+       "      <td>[\"http://www.fr.lastminute.com/week-end-pas-ch...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147719</th>\n",
+       "      <td>+train +Bordeaux</td>\n",
+       "      <td>Broad</td>\n",
+       "      <td>[\"http://www.lastminute.com/city-breaks/eurost...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147977</th>\n",
+       "      <td>+train +Cannes</td>\n",
+       "      <td>Broad</td>\n",
+       "      <td>[\"http://www.lastminute.com/city-breaks/eurost...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147978</th>\n",
+       "      <td>+train +to +Dijon</td>\n",
+       "      <td>Broad</td>\n",
+       "      <td>[\"http://www.lastminute.com/city-breaks/eurost...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>148113</th>\n",
+       "      <td>bravo air</td>\n",
+       "      <td>Exact</td>\n",
+       "      <td>[\"http://www.bravofly.com/vg1/flights.do?COBRA...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>148320</th>\n",
+       "      <td>London to prague</td>\n",
+       "      <td>Exact</td>\n",
+       "      <td>[\"http://www.lastminute.com/flights/prague.htm...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>148721</th>\n",
+       "      <td>brabofly</td>\n",
+       "      <td>Exact</td>\n",
+       "      <td>[\"http://www.bravofly.com/vg1/flights.do?COBRA...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>148997</th>\n",
+       "      <td>last minute palerme</td>\n",
+       "      <td>Exact</td>\n",
+       "      <td>[\"http://www.fr.lastminute.com/week-end-pas-ch...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>151645</th>\n",
+       "      <td>last minute casablanca</td>\n",
+       "      <td>Exact</td>\n",
+       "      <td>[\"http://www.fr.lastminute.com/week-end-pas-ch...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>152970</th>\n",
+       "      <td>citytrip rome</td>\n",
+       "      <td>Exact</td>\n",
+       "      <td>[\"http://www.fr.lastminute.com/week-end-pas-ch...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>154066</th>\n",
+       "      <td>rome last minute</td>\n",
+       "      <td>Exact</td>\n",
+       "      <td>[\"http://www.fr.lastminute.com/week-end-pas-ch...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>154357</th>\n",
+       "      <td>+trains +to +Bordeaux</td>\n",
+       "      <td>Broad</td>\n",
+       "      <td>[\"http://www.lastminute.com/city-breaks/eurost...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>155679</th>\n",
+       "      <td>+train +Poitiers</td>\n",
+       "      <td>Broad</td>\n",
+       "      <td>[\"http://www.lastminute.com/city-breaks/eurost...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>155943</th>\n",
+       "      <td>+train +Lille</td>\n",
+       "      <td>Broad</td>\n",
+       "      <td>[\"http://www.lastminute.com/city-breaks/eurost...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>156199</th>\n",
+       "      <td>beavofly</td>\n",
+       "      <td>Exact</td>\n",
+       "      <td>[\"http://www.bravofly.com/vg1/flights.do?COBRA...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>135603</th>\n",
+       "      <td>bravofy</td>\n",
+       "      <td>Exact</td>\n",
+       "      <td>[\"http://www.bravofly.com/vg1/flights.do?COBRA...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>134474</th>\n",
+       "      <td>+train +to +Biarritz</td>\n",
+       "      <td>Broad</td>\n",
+       "      <td>[\"http://www.lastminute.com/city-breaks/eurost...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1652</th>\n",
+       "      <td>+weekends +to +rome</td>\n",
+       "      <td>Broad</td>\n",
+       "      <td>[\"http://www.lastminute.com/city-breaks/rome.h...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>132123</th>\n",
+       "      <td>cheapflights</td>\n",
+       "      <td>Exact</td>\n",
+       "      <td>[\"http://www.lastminute.com/flights/?COBRANDED...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [Criteria, KeywordMatchType, Urls, NbOfAccounts, NbOfAccountsWithClicks]\n",
-       "Index: []"
+       "                            Criteria KeywordMatchType  \\\n",
+       "1396                flight to London           Phrase   \n",
+       "135151  +belfast +flight +and +hotel            Broad   \n",
+       "136340         +flight +to +Stansted            Broad   \n",
+       "136727         +vuelos +last +minute            Broad   \n",
+       "136763      +train +Bourg St Maurice            Broad   \n",
+       "137444                 bravo fly com            Exact   \n",
+       "137702         city trip last minute            Exact   \n",
+       "147719              +train +Bordeaux            Broad   \n",
+       "147977                +train +Cannes            Broad   \n",
+       "147978             +train +to +Dijon            Broad   \n",
+       "148113                     bravo air            Exact   \n",
+       "148320              London to prague            Exact   \n",
+       "148721                      brabofly            Exact   \n",
+       "148997           last minute palerme            Exact   \n",
+       "151645        last minute casablanca            Exact   \n",
+       "152970                 citytrip rome            Exact   \n",
+       "154066              rome last minute            Exact   \n",
+       "154357         +trains +to +Bordeaux            Broad   \n",
+       "155679              +train +Poitiers            Broad   \n",
+       "155943                 +train +Lille            Broad   \n",
+       "156199                      beavofly            Exact   \n",
+       "135603                       bravofy            Exact   \n",
+       "134474          +train +to +Biarritz            Broad   \n",
+       "1652             +weekends +to +rome            Broad   \n",
+       "132123                  cheapflights            Exact   \n",
+       "\n",
+       "                                                     Urls  NbOfAccounts  \\\n",
+       "1396    [\"http://www.bravofly.com/vg1/home.do?arrivalA...             2   \n",
+       "135151  [\"http://www.lastminute.com/city-breaks/belfas...             2   \n",
+       "136340  [\"http://www.lastminute.com/flights/search-for...             2   \n",
+       "136727  [\"http://www.es.lastminute.com/vuelos/?COBRAND...             2   \n",
+       "136763  [\"http://www.lastminute.com/city-breaks/eurost...             2   \n",
+       "137444  [\"http://www.bravofly.com/vg1/flights.do?COBRA...             2   \n",
+       "137702  [\"http://www.fr.lastminute.com/week-end-pas-ch...             2   \n",
+       "147719  [\"http://www.lastminute.com/city-breaks/eurost...             2   \n",
+       "147977  [\"http://www.lastminute.com/city-breaks/eurost...             2   \n",
+       "147978  [\"http://www.lastminute.com/city-breaks/eurost...             2   \n",
+       "148113  [\"http://www.bravofly.com/vg1/flights.do?COBRA...             2   \n",
+       "148320  [\"http://www.lastminute.com/flights/prague.htm...             2   \n",
+       "148721  [\"http://www.bravofly.com/vg1/flights.do?COBRA...             2   \n",
+       "148997  [\"http://www.fr.lastminute.com/week-end-pas-ch...             2   \n",
+       "151645  [\"http://www.fr.lastminute.com/week-end-pas-ch...             2   \n",
+       "152970  [\"http://www.fr.lastminute.com/week-end-pas-ch...             2   \n",
+       "154066  [\"http://www.fr.lastminute.com/week-end-pas-ch...             2   \n",
+       "154357  [\"http://www.lastminute.com/city-breaks/eurost...             2   \n",
+       "155679  [\"http://www.lastminute.com/city-breaks/eurost...             2   \n",
+       "155943  [\"http://www.lastminute.com/city-breaks/eurost...             2   \n",
+       "156199  [\"http://www.bravofly.com/vg1/flights.do?COBRA...             2   \n",
+       "135603  [\"http://www.bravofly.com/vg1/flights.do?COBRA...             2   \n",
+       "134474  [\"http://www.lastminute.com/city-breaks/eurost...             2   \n",
+       "1652    [\"http://www.lastminute.com/city-breaks/rome.h...             2   \n",
+       "132123  [\"http://www.lastminute.com/flights/?COBRANDED...             2   \n",
+       "\n",
+       "        NbOfAccountsWithClicks  \n",
+       "1396                         2  \n",
+       "135151                       2  \n",
+       "136340                       2  \n",
+       "136727                       2  \n",
+       "136763                       2  \n",
+       "137444                       2  \n",
+       "137702                       2  \n",
+       "147719                       2  \n",
+       "147977                       2  \n",
+       "147978                       2  \n",
+       "148113                       2  \n",
+       "148320                       2  \n",
+       "148721                       2  \n",
+       "148997                       2  \n",
+       "151645                       2  \n",
+       "152970                       2  \n",
+       "154066                       2  \n",
+       "154357                       2  \n",
+       "155679                       2  \n",
+       "155943                       2  \n",
+       "156199                       2  \n",
+       "135603                       2  \n",
+       "134474                       2  \n",
+       "1652                         2  \n",
+       "132123                       2  "
       ]
      },
-     "execution_count": 77,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[df['NbOfAccountsWithClicks'] > 10].sort_values(by=['NbOfAccountsWithClicks'],ascending=False)[:25]"
+    "df[df['NbOfAccountsWithClicks'] > 1].sort_values(by=['NbOfAccountsWithClicks'],ascending=False)[:25]"
    ]
   },
   {
@@ -419,7 +696,7 @@
     "AND NOT IsNegative \n",
     "AND Status = 'enabled' AND AdGroupStatus = 'enabled' AND CampaignStatus = 'enabled'\n",
     "AND Month = '2016-04-01'\n",
-    "AND Criteria = 'bravo fly' AND KeywordMatchType = 'Exact'\n",
+    "AND Criteria = 'flight to London fly' AND KeywordMatchType = 'Exact'\n",
     "GROUP BY 1,2,3,4,5,6"
    ]
   },
