--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -179,7 +179,7 @@
    },
    "outputs": [],
    "source": [
-    "%sql --module query_keywords_overlap\n",
+    "%sql --module querykeywords_overlap\n",
     "SELECT\n",
     "  Criteria,\n",
     "  KeywordMatchType,\n",
