--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -264,6 +264,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(167819, 21)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x7f7d5b8c2710>]], dtype=object)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAfcAAAFhCAYAAABtSuN5AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAHNNJREFUeJzt3W1wlOX9t/FvSoJiDAUk2cS0zX8aX4Aa2iqgDcgG8swS\nCEkYZ6oWTa06xVAlPrSZdLhDCm3FYO1MjYTu4ODYqVMKqFlHJUEStBp8KsmUMq2B3oGkLKEhQlJw\ngZz3C/vf22CAi7CbhdPj86p7Jdn97W+wR3a59iLKGGMEAACs8ZVIDwAAAEKLuAMAYBniDgCAZYg7\nAACWIe4AAFiGuAMAYBniDuCC/PCHP9SWLVsiPQaAc4jic+7AyHvllVf03HPPae/evbr66qs1efJk\n3X///br55psjPRoAC0RHegDgy2b9+vX63e9+p6qqKs2cOVMxMTF666239Oabb14ScT99+rRGjRoV\n6TEAXATelgdGUF9fn37zm99o+fLlysrK0pVXXqlRo0bJ7XbrkUceUSAQ0MqVK3Xbbbdp1qxZWrVq\nlU6ePClJ2rlzp9xut9avX6/09HTddttt2rRpkySptbVVM2fO1OffiNu6davmz58vSTLGqK6uTtnZ\n2br11lv18MMP6+jRo5Kkzs5OTZo0SRs3btTs2bN19913KxAI6JFHHtEtt9yiadOmadGiRerp6ZEk\n3XXXXdq4cWPwfp955hnNmTNHM2bM0E9+8hP19fUNut8tW7Zo9uzZ+u53v6tnn302OF9ra6uKi4t1\n8803a+bMmfrVr34V5u0DXx7EHRhBH330kU6ePKmsrKwhv15bW6u2tja9/PLLeumll9Ta2qra2trg\n1w8fPqz+/n7t2LFDP//5z7VixQodO3ZMU6ZM0VVXXaV33303+L319fXBuG/YsEHbtm3TCy+8oB07\ndmjs2LGqqqoa9Njvv/++XnvtNXm9Xm3evDn4ODt37lRVVZWuuOKKL8z7pz/9SS+99JKef/55NTQ0\nqL+/XytWrBj0PR9++KFef/11rV+/Xr/97W+1d+9eSdKqVau0ePFiffDBB9q6davy8/OHt1QAX0Dc\ngRHU29urcePG6StfGfo/vfr6ei1ZskTjx4/X+PHj9eCDD+qll14Kfj0mJkY/+tGPgq/2r7rqKu3b\nt0+SNHfuXL3yyiuSPnuHoLm5WfPmzZMkvfjii3rooYeUkJCgmJgYLVmyRK+//roGBgYkSVFRUSor\nK9MVV1yh0aNHKzo6Wr29vdq3b5+ioqJ0/fXXKzY2dsh57777biUnJ2vMmDFatmyZXn311UH3++CD\nD2r06NGaNGmSJk2apD179gSfS0dHh44cOaIxY8ZoypQpIdoyAOIOjKBx48apt7c3GL8zHTp0SNde\ne23w9rXXXqtDhw4N+vnP/2Jw5ZVXqr+/X5JUUFCghoYGnTx5Ulu3btUNN9ygxMRESVJXV5cefPBB\nTZ8+XdOnT5fH41F0dLQOHz4cvK///V5JKiws1MyZM7Vs2TLNmjVLq1ev1unTp887b3Jysk6dOjXo\nfidOnDho3v/85z+SpJUrV2rfvn3Kz8/XokWLtH379nMvD4BjxB0YQd/5zncUExOjhoaGIb/ucrnU\n2dkZvN3V1aWEhARH952amqprr71WTU1Nqq+vD75ql6SkpCStW7dOO3fu1M6dO/Xee+/pL3/5y6D7\njoqKCv7vUaNGacmSJfL5fPrDH/6g7du3D/nxt4SEBHV1dQVvd3Z2Kjo6elDQz+Yb3/iGampq9O67\n7+ree+/V0qVLdeLECUfPFcC5EXdgBF199dVaunSpVqxYoYaGBp04cUKnTp1Sc3OzVq9eLY/Ho9ra\nWvX09Kinp0fPPPOMFixY4Pj+582bpw0bNuiDDz5QXl5e8Pjtt9+uNWvWBEPc09OjxsbG4NfP/ERs\nS0uL/v73v2tgYEBXXXWVoqOjhzyD3uPx6LnnntOBAwfU39+vp556Sh6PJ/juwrk+afvyyy8HT9KL\ni4tTVFTUWf+6AsCFCctH4Ywx+vWvf63+/n7deOONKiwsDMfDAJele+65R/Hx8aqtrdWjjz6q2NhY\n3XjjjXrggQd0/fXX69ixY5o/f76ioqKUn5+vBx544Kz39flX29JnsV2zZo1mzZqlcePGBY8vXrxY\nklRaWqru7m5dc801ys/PV2Zm5pD3c/jwYS1fvlx+v1+xsbGaO3du8OS8z39vSUmJuru7deeddyoQ\nCOi2225TZWXlWef7/O0dO3bol7/8pU6cOKHk5GQ99dRTGj16tKMdAji3sFzEpqGhQQ0NDRo/frzc\nbrduvfXWUD8EAAA4C0fvgVVUVCg9PV0FBQWDjjc3NysvL0+5ubmqq6sLHt+7d69uuukmPf744/r9\n738f2okBAMA5OYp7UVGRvF7voGMDAwOqrq6W1+tVfX29fD6f2tvbJX121u3YsWMliStdAQAwwhzF\nferUqcFY/6/W1lalpKQoOTlZMTEx8ng8wRN0cnJyghfZmDZtWuinBgAAZzXsE+r8fr+SkpKCt10u\nl9ra2iR99lnWlStXXvx0AADggl0SnzvhH6YDACB0hv3K3eVyDbp4hd/vd3yxjTNFRUWpu/vYcEf5\nUomPj2NXDrAn59iVM+zJGfbkXHx8XNju2/Er9zNfXaelpamjo0OdnZ0KBALy+XzBz8wCAIDIcfTK\nvby8XC0tLert7VVGRobKyspUXFysyspKlZaWyhijkpISpaamhnteAABwHmG5iM1w8DaOM7zl5Qx7\nco5dOcOenGFPzl0Sb8sDAIDLA3EHAMAyxB0AAMsQdwAALEPcAQCwDHEHAMAyxB0AAMsQdwAALEPc\nAQCwDHEHAMAyxB0AAMsQdwAALEPcAQCwDHEHAMAyxB0AAMsQdwAALEPcAQCwDHEHAMAyxB0AAMsQ\ndwAALEPcAQCwDHEHAMAyxB0AAMsQdwAALEPcAQCwDHEHAMAyxB0AAMsQdwAALEPcAQCwDHEHAMAy\nxB0AAMsQdwAALEPcAQCwDHEHAMAy0ZEeQJLqnvuj9uw9FOkxzunE8f/owXuKFR8fH+lRAAA4p0si\n7nv+2a1/9H8t0mOcU9+RLh050kPcAQCXPN6WBwDAMsQdAADLEHcAACxD3AEAsAxxBwDAMmGJ+86d\nO3XHHXdo+fLleu+998LxEAAA4CzCEveoqCjFxsYqEAgoMTExHA8BAADOwlHcKyoqlJ6eroKCgkHH\nm5ublZeXp9zcXNXV1QWPT5s2TXV1dXrkkUf09NNPh3ZiAABwTo7iXlRUJK/XO+jYwMCAqqur5fV6\nVV9fL5/Pp/b29kHfExcXp5MnT4ZuWgAAcF6OrlA3depUdXZ2DjrW2tqqlJQUJScnS5I8Ho8aGxuV\nmpqqrVu3aseOHerr69Odd94Z+qkBAMBZDfvys36/X0lJScHbLpdLbW1tkqTs7GxlZ2df/HSXmAkT\nYhUfHxfpMS6JGS4H7Mk5duUMe3KGPUXeJXFt+ctFT0+/uruPRXSG+Pi4iM9wOWBPzrErZ9iTM+zJ\nuXD+EjTss+VdLpe6urqCt/1+vxISEkIyFAAAGD7HcTfGDLqdlpamjo4OdXZ2KhAIyOfzKTMzM+QD\nAgCAC+Pobfny8nK1tLSot7dXGRkZKisrU3FxsSorK1VaWipjjEpKSpSamhrueQEAwHk4intNTc2Q\nx91ut9xud0gHAgAAF4drywMAYBniDgCAZYg7AACWIe4AAFiGuAMAYBniDgCAZYg7AACWIe4AAFiG\nuAMAYBniDgCAZYg7AACWIe4AAFiGuAMAYBniDgCAZYg7AACWIe4AAFiGuAMAYBniDgCAZYg7AACW\nIe4AAFiGuAMAYBniDgCAZYg7AACWIe4AAFiGuAMAYBniDgCAZYg7AACWIe4AAFiGuAMAYBniDgCA\nZYg7AACWIe4AAFiGuAMAYBniDgCAZYg7AACWIe4AAFiGuAMAYBniDgCAZYg7AACWIe4AAFgmbHE/\nfvy4iouL1dTUFK6HAAAAQwhb3NetW6e5c+eG6+4BAMBZOIp7RUWF0tPTVVBQMOh4c3Oz8vLylJub\nq7q6uuDxP//5z7ruuus0YcIEGWNCOzEAADgnR3EvKiqS1+sddGxgYEDV1dXyer2qr6+Xz+dTe3u7\nJKmlpUW7du1SfX29/vjHP4Z+agAAcFbRTr5p6tSp6uzsHHSstbVVKSkpSk5OliR5PB41NjYqNTVV\nDz/8sCRpy5YtGj9+fIhHBgAA5+Io7kPx+/1KSkoK3na5XGpraxv0PYWFhcOf7BI0YUKs4uPjIj3G\nJTHD5YA9OceunGFPzrCnyBt23L+Menr61d19LKIzxMfHRXyGywF7co5dOcOenGFPzoXzl6Bhny3v\ncrnU1dUVvO33+5WQkBCSoQAAwPA5jvuZZ72npaWpo6NDnZ2dCgQC8vl8yszMDPmAAADgwjh6W768\nvFwtLS3q7e1VRkaGysrKVFxcrMrKSpWWlsoYo5KSEqWmpoZ7XgAAcB6O4l5TUzPkcbfbLbfbHdKB\nAADAxeHa8gAAWIa4AwBgGeIOAIBliDsAAJYh7gAAWIa4AwBgGeIOAIBliDsAAJYh7gAAWIa4AwBg\nGeIOAIBliDsAAJYh7gAAWIa4AwBgGeIOAIBliDsAAJYh7gAAWIa4AwBgGeIOAIBliDsAAJYh7gAA\nWIa4AwBgGeIOAIBliDsAAJYh7gAAWIa4AwBgGeIOAIBliDsAAJYh7gAAWIa4AwBgGeIOAIBliDsA\nAJYh7gAAWIa4AwBgGeIOAIBliDsAAJYh7gAAWIa4AwBgGeIOAIBliDsAAJaJDsedtre3a8OGDfrk\nk080Y8YMLVq0KBwPAwAAhhCWV+6pqamqqqrSU089pbfffjscDwEAAM7CUdwrKiqUnp6ugoKCQceb\nm5uVl5en3Nxc1dXVDfratm3bdN9998nj8YRuWgAAcF6O4l5UVCSv1zvo2MDAgKqrq+X1elVfXy+f\nz6f29vbg1+fMmaN169Zp06ZNoZ0YAACck6O/c586dao6OzsHHWttbVVKSoqSk5MlSR6PR42NjUpN\nTdXOnTv1xhtvKBAI6JZbbgn91AAA4KyGfUKd3+9XUlJS8LbL5VJbW5skafr06Zo+ffrFT3eJmTAh\nVvHxcZEe45KY4XLAnpxjV86wJ2fYU+SF5Wx5W/X09Ku7+1hEZ4iPj4v4DJcD9uQcu3KGPTnDnpwL\n5y9Bwz5b3uVyqaurK3jb7/crISEhJEMBAIDhcxx3Y8yg22lpaero6FBnZ6cCgYB8Pp8yMzNDPiAA\nALgwjt6WLy8vV0tLi3p7e5WRkaGysjIVFxersrJSpaWlMsaopKREqamp4Z4XAACch6O419TUDHnc\n7XbL7XaHdCAAAHBxuLY8AACWIe4AAFiGuAMAYBniDgCAZYg7AACWIe4AAFiGuAMAYBniDgCAZYg7\nAACWIe4AAFiGuAMAYBniDgCAZYg7AACWIe4AAFiGuAMAYBniDgCAZYg7AACWIe4AAFiGuAMAYBni\nDgCAZYg7AACWIe4AAFiGuAMAYBniDgCAZYg7AACWIe4AAFiGuAMAYBniDgCAZYg7AACWIe4AAFiG\nuAMAYBniDgCAZYg7AACWIe4AAFiGuAMAYBniDgCAZYg7AACWIe4AAFiGuAMAYBniDgCAZaLDdccN\nDQ1qampSf3+/iouLNWPGjHA9FAAA+JywxT0rK0tZWVk6evSonnjiCeIOAMAIcfy2fEVFhdLT01VQ\nUDDoeHNzs/Ly8pSbm6u6urov/Fxtba3uuOOOi58UAAA44jjuRUVF8nq9g44NDAyourpaXq9X9fX1\n8vl8am9vD379ySef1KxZszR58uTQTQwAAM7JcdynTp2qsWPHDjrW2tqqlJQUJScnKyYmRh6PR42N\njZKk559/Xu+8845ef/11vfjii6GdGgAAnNVF/Z273+9XUlJS8LbL5VJbW5sk6a677tJdd911cdNd\nYiZMiFV8fFykx7gkZrgcsCfn2JUz7MkZ9hR5YTuhzkY9Pf3q7j4W0Rni4+MiPsPlgD05x66cYU/O\nsCfnwvlL0EV9zt3lcqmrqyt42+/3KyEh4aKHAgAAw3dBcTfGDLqdlpamjo4OdXZ2KhAIyOfzKTMz\nM6QDAgCAC+P4bfny8nK1tLSot7dXGRkZKisrU3FxsSorK1VaWipjjEpKSpSamhrOeQEAwHk4jntN\nTc2Qx91ut9xud8gGAgAAF4drywMAYBniDgCAZYg7AACWIe4AAFiGuAMAYBniDgCAZYg7AACWIe4A\nAFiGuAMAYBniDgCAZYg7AACWIe4AAFiGuAMAYBniDgCAZYg7AACWIe4AAFiGuAMAYBniDgCAZYg7\nAACWIe4AAFiGuAMAYBniDgCAZYg7AACWIe4AAFiGuAMAYBniDgCAZYg7AACWIe4AAFiGuAMAYBni\nDgCAZYg7AACWIe4AAFiGuAMAYBniDgCAZYg7AACWIe4AAFiGuAMAYBniDgCAZYg7AACWIe4AAFgm\nOhx3un//fj377LPq6+vT008/HY6HAAAAZxGWV+5f//rXtXLlynDcNQAAOA9Hca+oqFB6eroKCgoG\nHW9ublZeXp5yc3NVV1cXlgEBAMCFcRT3oqIieb3eQccGBgZUXV0tr9er+vp6+Xw+tbe3D/oeY0zo\nJgUAAI44ivvUqVM1duzYQcdaW1uVkpKi5ORkxcTEyOPxqLGxUZLU29ur5cuXa8+ePbyiBwBghA37\nhDq/36+kpKTgbZfLpba2NknSuHHjVFVVdfHTAQCACxaWs+VtNWFCrOLj4yI9xiUxw+WAPTnHrpxh\nT86wp8gbdtxdLpe6urqCt/1+vxISEkIy1KWqp6df3d3HIjpDfHxcxGe4HLAn59iVM+zJGfbkXDh/\nCXL8UbgzT45LS0tTR0eHOjs7FQgE5PP5lJmZGfIBAQDAhXH0yr28vFwtLS3q7e1VRkaGysrKVFxc\nrMrKSpWWlsoYo5KSEqWmpoZ7XgAAcB6O4l5TUzPkcbfbLbfbHdKBAADAxeHa8gAAWIa4AwBgGeIO\nAIBliDsAAJYh7gAAWIa4AwBgGeIOAIBliDsAAJYh7gAAWIa4AwBgGeIOAIBliDsAAJYh7gAAWIa4\nAwBgGeIOAIBliDsAAJYh7gAAWIa4AwBgGeIOAIBliDsAAJYh7gAAWIa4AwBgGeIOAIBliDsAAJYh\n7gAAWIa4AwBgGeIOAIBliDsAAJYh7gAAWIa4AwBgGeIOAIBliDsAAJYh7gAAWIa4AwBgGeIOAIBl\niDsAAJYh7gAAWIa4AwBgGeIOAIBliDsAAJaJDsedHj9+XFVVVRo9erSmTZumgoKCcDwMAAAYQlhe\nub/xxhvKy8vTihUrtG3btnA8BAAAOAtHca+oqFB6evoXXoE3NzcrLy9Pubm5qqurCx73+/1KTEz8\n7AG+wjv/AACMJEflLSoqktfrHXRsYGBA1dXV8nq9qq+vl8/nU3t7uyQpMTFRfr8/9NMCAIDzchT3\nqVOnauzYsYOOtba2KiUlRcnJyYqJiZHH41FjY6MkKTs7W6+99pqqqqo0e/bs0E8NAADOatgn1Pn9\nfiUlJQVvu1wutbW1SZLGjBmjX/ziFxc/3SXEDAyoo+P/atSoyP41w5EjV6unp++c3/M///NNjRo1\naoQmAoDBTp8+rX/+c2+kx3DE1v+/DMvZ8hdqzf/5UaRHgIXi4+MiPcJlg105w56cSUwcp8TEmyI9\nxpfasF+GulwudXV1BW/7/X4lJCSEZCgAADB8juNujBl0Oy0tTR0dHers7FQgEJDP51NmZmbIBwQA\nABcmypxZ7SGUl5erpaVFvb29mjhxosrKylRcXKympiatWrVKxhiVlJTovvvuG4mZAQDAOTiKOwAA\nuHxwhRkAACxD3AEAsEzE4362S9h+WRw8eFDf//735fF4VFBQoA0bNkiSPvnkE5WWlio3N1c/+MEP\ndOzYseDPrF27Vjk5OcrPz9dbb70VPP7Xv/5VBQUFys3N1cqVK0f8uYyEgYEBLVy4UA888IAk9nQ2\nx44d09KlS5Wfny+Px6Ndu3axqyGsXbs2+N9eeXm5AoEAe/qvoS47HsrdBAIBPfzww8rJydHtt98+\n6NNXl5Oh9vTEE08oPz9fCxYsUFlZmfr6/v+1SUZsTyaCTp8+bbKyssyBAwdMIBAw8+fPNx9//HEk\nRxpxhw4dMrt37zbGGNPX12dycnLMxx9/bJ544glTV1dnjDFm7dq1ZvXq1cYYY/7xj3+YBQsWmJMn\nT5r9+/ebrKwsMzAwYIwxpqSkxOzatcsYY8y9995rmpubI/CMwmv9+vWmvLzc3H///cYYw57O4vHH\nHzcbN240xhhz8uRJc/ToUXZ1hgMHDpg5c+aYTz/91BhjzI9//GOzadMm9vRf7733ntm9e7eZN29e\n8Fgod/PCCy+Y5cuXG2OM8fl85qGHHhqppxZSQ+3p7bffNqdPnzbGGLN69Wrz5JNPGmNGdk8RfeV+\nrkvYflnEx8dr8uTJkqTY2FilpqbK7/ersbFRCxculCQtXLhQDQ0NkqRt27Zp7ty5io6O1te+9jWl\npKSotbVV3d3d6u/v15QpUyRJhYWFwZ+xxcGDB9XU1KRFixYFj7GnL+rr69P777+v4uJiSVJ0dLTi\n4uLY1RmuvvpqxcTE6Pjx4zp16pROnDghl8vFnv5rqMuOh3I3n7+v3NxcvfPOOyP11EJqqD2lp6cH\n/9G0b3/72zp48KCkkd1TROM+1CVsDx06FMGJIuvAgQPas2ePvvWtb+nf//63Jk6cKOmzXwB6enok\nDb0zv98/6F/i+/xxm6xatUqPPfaYoqKigsfY0xcdOHBA48eP109/+lMtXLhQP/vZz3T8+HF2dYav\nfvWrKi0tVUZGhmbNmqW4uDilp6ezp3Po6ekJ2W4OHToU/NqoUaM0duxY9fb2jtRTGTEbN26U2+2W\nNLJ7ivjfueMz/f39Wrp0qSoqKhQbGzsoYJK+cPvLZvv27Zo4caImT578hQsqfd6XfU+SdOrUKe3e\nvVvf+973tHnzZo0ZM0Z1dXX8mTrD/v379dxzz+nNN9/Ujh07dPz4cb388svs6QKEcjfn+u/6clVb\nW6uYmBjNmzcvZPfpdE8RjTuXsP3MqVOntHTpUi1YsEBZWVmSpGuuuUaHDx+WJHV3d2vChAmSPtvZ\nv/71r+DPHjx4UC6X6wvH/X6/XC7XCD6L8Prwww+1bds2ZWZmBi+q9Oijj2rixIns6QyJiYlKTExU\nWlqaJCknJ0e7d+/mz9QZ2tradNNNN2ncuHEaNWqUsrKy9NFHH7GncwjlbhISEoJvV58+fVp9fX0a\nN27cSD2VsNu0aZOamppUU1MTPDaSe4po3LmE7WcqKip03XXXafHixcFjc+bM0aZNmyRJmzdvDu5l\nzpw5evXVVxUIBLR//351dHRoypQpio+PV1xcnFpbW2WM0ZYtW6za5bJly7R9+3Y1NjZqzZo1uuWW\nW7R69WrNnj2bPZ1h4sSJSkpK0r59+yRJ7777rq677jr+TJ3hm9/8pnbt2qVPP/1Uxhj2NIQzXyWG\ncjdz5szR5s2bJUmvvfaabr311hF8ZqF15p6am5vl9XpVW1ur0aNHB4+P6J6GfYpgiDQ1NZmcnByT\nnZ1t1q5dG+lxRtz7779vJk2aZObPn28WLFhgCgsLTVNTkzly5IhZvHixycnJMffcc4/55JNPgj/z\n7LPPmqysLJOXl2d27NgRPN7W1mbmzZtnsrOzTXV1dSSezohoaWkJni3Pnob2t7/9zRQVFZn58+eb\nJUuWmKNHj7KrIaxbt87MnTvXzJs3zzz22GMmEAiwp/9atmyZmTFjhrnhhhuM2+02GzduNL29vSHb\nzaeffmqWLl1qsrOzzaJFi8z+/ftH9PmFylB7ys7ONhkZGaawsNAUFhYGz3Y3ZuT2xOVnAQCwDCfU\nAQBgGeIOAIBliDsAAJYh7gAAWIa4AwBgGeIOAIBliDsAAJYh7gAAWOb/AfWb23cUHOawAAAAAElF\nTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7f7d5b8c2a10>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df.hist('Conversions',log=True,bins=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
