--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -318,14 +318,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  1.00000000e+00,   1.59985872e+00,   2.55954792e+00,\n",
+       "         4.09491506e+00,   6.55128557e+00,   1.04811313e+01,\n",
+       "         1.67683294e+01,   2.68269580e+01,   4.29193426e+01,\n",
+       "         6.86648845e+01,   1.09854114e+02,   1.75751062e+02,\n",
+       "         2.81176870e+02,   4.49843267e+02,   7.19685673e+02,\n",
+       "         1.15139540e+03,   1.84206997e+03,   2.94705170e+03,\n",
+       "         4.71486636e+03,   7.54312006e+03,   1.20679264e+04,\n",
+       "         1.93069773e+04,   3.08884360e+04,   4.94171336e+04,\n",
+       "         7.90604321e+04,   1.26485522e+05,   2.02358965e+05,\n",
+       "         3.23745754e+05,   5.17947468e+05,   8.28642773e+05,\n",
+       "         1.32571137e+06,   2.12095089e+06,   3.39322177e+06,\n",
+       "         5.42867544e+06,   8.68511374e+06,   1.38949549e+07,\n",
+       "         2.22299648e+07,   3.55648031e+07,   5.68986603e+07,\n",
+       "         9.10298178e+07,   1.45634848e+08,   2.32995181e+08,\n",
+       "         3.72759372e+08,   5.96362332e+08,   9.54095476e+08,\n",
+       "         1.52641797e+09,   2.44205309e+09,   3.90693994e+09,\n",
+       "         6.25055193e+09,   1.00000000e+10])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.logspace(0,10)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "np.exp"
-   ]
+   "source": []
   }
  ],
  "metadata": {
