--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -326,33 +326,48 @@
     {
      "data": {
       "text/plain": [
-       "array([  1.00000000e+00,   1.59985872e+00,   2.55954792e+00,\n",
-       "         4.09491506e+00,   6.55128557e+00,   1.04811313e+01,\n",
-       "         1.67683294e+01,   2.68269580e+01,   4.29193426e+01,\n",
-       "         6.86648845e+01,   1.09854114e+02,   1.75751062e+02,\n",
-       "         2.81176870e+02,   4.49843267e+02,   7.19685673e+02,\n",
-       "         1.15139540e+03,   1.84206997e+03,   2.94705170e+03,\n",
-       "         4.71486636e+03,   7.54312006e+03,   1.20679264e+04,\n",
-       "         1.93069773e+04,   3.08884360e+04,   4.94171336e+04,\n",
-       "         7.90604321e+04,   1.26485522e+05,   2.02358965e+05,\n",
-       "         3.23745754e+05,   5.17947468e+05,   8.28642773e+05,\n",
-       "         1.32571137e+06,   2.12095089e+06,   3.39322177e+06,\n",
-       "         5.42867544e+06,   8.68511374e+06,   1.38949549e+07,\n",
-       "         2.22299648e+07,   3.55648031e+07,   5.68986603e+07,\n",
-       "         9.10298178e+07,   1.45634848e+08,   2.32995181e+08,\n",
-       "         3.72759372e+08,   5.96362332e+08,   9.54095476e+08,\n",
-       "         1.52641797e+09,   2.44205309e+09,   3.90693994e+09,\n",
-       "         6.25055193e+09,   1.00000000e+10])"
+       "array([  0.00000000e+00,   9.95218165e-02,   2.08948225e-01,\n",
+       "         3.29264948e-01,   4.61555811e-01,   6.07012500e-01,\n",
+       "         7.66945303e-01,   9.42794909e-01,   1.13614539e+00,\n",
+       "         1.34873846e+00,   1.58248917e+00,   1.83950319e+00,\n",
+       "         2.12209570e+00,   2.43281234e+00,   2.77445206e+00,\n",
+       "         3.15009238e+00,   3.56311712e+00,   4.01724682e+00,\n",
+       "         4.51657234e+00,   5.06559164e+00,   5.66925034e+00,\n",
+       "         6.33298625e+00,   7.06277836e+00,   7.86520070e+00,\n",
+       "         8.74748158e+00,   9.71756866e+00,   1.07842006e+01,\n",
+       "         1.19569856e+01,   1.32464883e+01,   1.46643247e+01,\n",
+       "         1.62232668e+01,   1.79373576e+01,   1.98220378e+01,\n",
+       "         2.18942849e+01,   2.41727657e+01,   2.66780050e+01,\n",
+       "         2.94325704e+01,   3.24612751e+01,   3.57914019e+01,\n",
+       "         3.94529491e+01,   4.34789001e+01,   4.79055210e+01,\n",
+       "         5.27726873e+01,   5.81242428e+01,   6.40083948e+01,\n",
+       "         7.04781484e+01,   7.75917835e+01,   8.54133806e+01,\n",
+       "         9.40133972e+01,   1.03469303e+02,   1.13866278e+02,\n",
+       "         1.25297979e+02,   1.37867383e+02,   1.51687717e+02,\n",
+       "         1.66883476e+02,   1.83591544e+02,   2.01962430e+02,\n",
+       "         2.22161620e+02,   2.44371070e+02,   2.68790844e+02,\n",
+       "         2.95640919e+02,   3.25163162e+02,   3.57623513e+02,\n",
+       "         3.93314376e+02,   4.32557259e+02,   4.75705665e+02,\n",
+       "         5.23148279e+02,   5.75312468e+02,   6.32668131e+02,\n",
+       "         6.95731935e+02,   7.65071963e+02,   8.41312836e+02,\n",
+       "         9.25141339e+02,   1.01731261e+03,   1.11865693e+03,\n",
+       "         1.23008722e+03,   1.35260726e+03,   1.48732071e+03,\n",
+       "         1.63544109e+03,   1.79830268e+03,   1.97737255e+03,\n",
+       "         2.17426378e+03,   2.39074998e+03,   2.62878129e+03,\n",
+       "         2.89050190e+03,   3.17826942e+03,   3.49467609e+03,\n",
+       "         3.84257212e+03,   4.22509140e+03,   4.64567969e+03,\n",
+       "         5.10812569e+03,   5.61659516e+03,   6.17566844e+03,\n",
+       "         6.79038170e+03,   7.46627235e+03,   8.20942885e+03,\n",
+       "         9.02654565e+03,   9.92498339e+03,   1.09128353e+04,\n",
+       "         1.19990000e+04])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "np.logspace(0,10)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
