--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -313,7 +313,7 @@
     }
    ],
    "source": [
-    "df.hist('Conversions',bins=(np.logspace(0,np.log10(10000),100)-1),)\n",
+    "df.hist('Conversions',bins=100)\n",
     "plt.gca().set_xscale(\"log\")\n",
     "plt.gca().set_xlabel(\"Conversions (log)\")\n",
     "plt.gca().set_ylabel(\"Keywords \")\n"
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -329,48 +329,27 @@
     {
      "data": {
       "text/plain": [
-       "array([  0.00000000e+00,   9.95218165e-02,   2.08948225e-01,\n",
-       "         3.29264948e-01,   4.61555811e-01,   6.07012500e-01,\n",
-       "         7.66945303e-01,   9.42794909e-01,   1.13614539e+00,\n",
-       "         1.34873846e+00,   1.58248917e+00,   1.83950319e+00,\n",
-       "         2.12209570e+00,   2.43281234e+00,   2.77445206e+00,\n",
-       "         3.15009238e+00,   3.56311712e+00,   4.01724682e+00,\n",
-       "         4.51657234e+00,   5.06559164e+00,   5.66925034e+00,\n",
-       "         6.33298625e+00,   7.06277836e+00,   7.86520070e+00,\n",
-       "         8.74748158e+00,   9.71756866e+00,   1.07842006e+01,\n",
-       "         1.19569856e+01,   1.32464883e+01,   1.46643247e+01,\n",
-       "         1.62232668e+01,   1.79373576e+01,   1.98220378e+01,\n",
-       "         2.18942849e+01,   2.41727657e+01,   2.66780050e+01,\n",
-       "         2.94325704e+01,   3.24612751e+01,   3.57914019e+01,\n",
-       "         3.94529491e+01,   4.34789001e+01,   4.79055210e+01,\n",
-       "         5.27726873e+01,   5.81242428e+01,   6.40083948e+01,\n",
-       "         7.04781484e+01,   7.75917835e+01,   8.54133806e+01,\n",
-       "         9.40133972e+01,   1.03469303e+02,   1.13866278e+02,\n",
-       "         1.25297979e+02,   1.37867383e+02,   1.51687717e+02,\n",
-       "         1.66883476e+02,   1.83591544e+02,   2.01962430e+02,\n",
-       "         2.22161620e+02,   2.44371070e+02,   2.68790844e+02,\n",
-       "         2.95640919e+02,   3.25163162e+02,   3.57623513e+02,\n",
-       "         3.93314376e+02,   4.32557259e+02,   4.75705665e+02,\n",
-       "         5.23148279e+02,   5.75312468e+02,   6.32668131e+02,\n",
-       "         6.95731935e+02,   7.65071963e+02,   8.41312836e+02,\n",
-       "         9.25141339e+02,   1.01731261e+03,   1.11865693e+03,\n",
-       "         1.23008722e+03,   1.35260726e+03,   1.48732071e+03,\n",
-       "         1.63544109e+03,   1.79830268e+03,   1.97737255e+03,\n",
-       "         2.17426378e+03,   2.39074998e+03,   2.62878129e+03,\n",
-       "         2.89050190e+03,   3.17826942e+03,   3.49467609e+03,\n",
-       "         3.84257212e+03,   4.22509140e+03,   4.64567969e+03,\n",
-       "         5.10812569e+03,   5.61659516e+03,   6.17566844e+03,\n",
-       "         6.79038170e+03,   7.46627235e+03,   8.20942885e+03,\n",
-       "         9.02654565e+03,   9.92498339e+03,   1.09128353e+04,\n",
-       "         1.19990000e+04])"
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x7f7d59c3d710>]], dtype=object)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAfcAAAFhCAYAAABtSuN5AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAHP5JREFUeJzt3X1wVOXd//FPTIIChoKSLDFt02m8Z0ANbTWgDcgG8swS\nCEkYZ6oWTa06xVAlPrSZdPiFFNqKwdqZGgndwRvHTp1SQM06KgmSoJXgU0mm1GmN3HcgKUsoBkgK\nbCDX7w9677gY8BB2E7x8v/7iXEnOXvsd4J1dTg5RxhgjAABgjctGegMAACC8iDsAAJYh7gAAWIa4\nAwBgGeIOAIBliDsAAJYh7gAuyA9/+ENt2bJlpLcB4Dyi+Dl3YPi9/PLLevbZZ/Xxxx/ryiuv1JQp\nU3TffffppptuGumtAbBAzEhvAPiyWb9+vX73u9+pqqpKM2fOVGxsrN5880298cYbl0TcT58+rejo\n6JHeBoCLwNvywDDq7e3Vb37zGy1fvlxZWVm64oorFB0dLbfbrYcffliBQEArV67UrbfeqlmzZmnV\nqlXq7++XJO3atUtut1vr169Xenq6br31Vm3atEmS1NraqpkzZ+rTb8Rt3bpV8+fPlyQZY1RXV6fs\n7Gzdcssteuihh3T06FFJUmdnpyZPnqyNGzdq9uzZuuuuuxQIBPTwww/r5ptv1rRp07Ro0SIdPnxY\nknTnnXdq48aNwfM+/fTTmjNnjmbMmKGf/OQn6u3tDTnvli1bNHv2bH33u9/VM888E9xfa2uriouL\nddNNN2nmzJn61a9+FeHpA18exB0YRh988IH6+/uVlZU16Mdra2vV1taml156SS+++KJaW1tVW1sb\n/PihQ4fU19enHTt26Oc//7lWrFihY8eOaerUqRozZox27twZ/Nz6+vpg3Dds2KBt27bp+eef144d\nOzRu3DhVVVWFPPa7776rV199VV6vV5s3bw4+zq5du1RVVaXLL7/8M/v905/+pBdffFHPPfecGhoa\n1NfXpxUrVoR8zvvvv6/XXntN69ev129/+1t9/PHHkqRVq1Zp8eLFeu+997R161bl5+cPbagAPoO4\nA8Oop6dH48eP12WXDf5Hr76+XkuWLNGECRM0YcIEPfDAA3rxxReDH4+NjdWPfvSj4Kv9MWPGaO/e\nvZKkuXPn6uWXX5Z05h2C5uZmzZs3T5L0wgsv6MEHH1RCQoJiY2O1ZMkSvfbaaxoYGJAkRUVFqays\nTJdffrlGjRqlmJgY9fT0aO/evYqKitJ1112nsWPHDrrfu+66S0lJSRo9erSWLVumV155JeS8Dzzw\ngEaNGqXJkydr8uTJ+vDDD4PPpaOjQ5988olGjx6tqVOnhmnKAIg7MIzGjx+vnp6eYPzOdvDgQV1z\nzTXB42uuuUYHDx4M+fpPf2NwxRVXqK+vT5JUUFCghoYG9ff3a+vWrbr++us1adIkSVJXV5ceeOAB\nTZ8+XdOnT5fH41FMTIwOHToUPNf/fa4kFRYWaubMmVq2bJlmzZql1atX6/Tp05+736SkJJ06dSrk\nvBMnTgzZ77///W9J0sqVK7V3717l5+dr0aJF2r59+/mHB8Ax4g4Mo+985zuKjY1VQ0PDoB93uVzq\n7OwMHnd1dSkhIcHRuVNSUnTNNdeoqalJ9fX1wVftkpSYmKh169Zp165d2rVrl9555x395S9/CTl3\nVFRU8NfR0dFasmSJfD6f/vCHP2j79u2D/vhbQkKCurq6gsednZ2KiYkJCfq5fP3rX1dNTY127typ\ne+65R0uXLtWJEyccPVcA50fcgWF05ZVXaunSpVqxYoUaGhp04sQJnTp1Ss3NzVq9erU8Ho9qa2t1\n+PBhHT58WE8//bQWLFjg+Pzz5s3Thg0b9N577ykvLy+4ftttt2nNmjXBEB8+fFiNjY3Bj5/9E7Et\nLS36+9//roGBAY0ZM0YxMTGDXkHv8Xj07LPPav/+/err69OTTz4pj8cTfHfhfD9p+9JLLwUv0ouL\ni1NUVNQ5/7kCwIWJyI/CGWP061//Wn19fbrhhhtUWFgYiYcBvpDuvvtuxcfHq7a2Vo888ojGjh2r\nG264Qffff7+uu+46HTt2TPPnz1dUVJTy8/N1//33n/Ncn361LZ2J7Zo1azRr1iyNHz8+uL548WJJ\nUmlpqbq7u3X11VcrPz9fmZmZg57n0KFDWr58ufx+v8aOHau5c+cGL8779OeWlJSou7tbd9xxhwKB\ngG699VZVVlaec3+fPt6xY4d++ctf6sSJE0pKStKTTz6pUaNGOZohgPOLyE1sGhoa1NDQoAkTJsjt\nduuWW24J90MAAIBzcPQeWEVFhdLT01VQUBCy3tzcrLy8POXm5qquri64/vHHH+vGG2/UY489pt//\n/vfh3TEAADgvR3EvKiqS1+sNWRsYGFB1dbW8Xq/q6+vl8/nU3t4u6cxVt+PGjZMk7nQFAMAwcxT3\ntLS0YKz/T2trq5KTk5WUlKTY2Fh5PJ7gBTo5OTnBm2xMmzYt/LsGAADnNOQL6vx+vxITE4PHLpdL\nbW1tks78LOvKlSsvfncAAOCCXRI/d8J/TAcAQPgM+ZW7y+UKuXmF3+93fLONs0VFRam7+9hQt/Kl\nEh8fx6wcYE7OMStnmJMzzMm5+Pi4iJ3b8Sv3s19dp6amqqOjQ52dnQoEAvL5fMGfmQUAACPH0Sv3\n8vJytbS0qKenRxkZGSorK1NxcbEqKytVWloqY4xKSkqUkpIS6f0CAIDPEZGb2AwFb+M4w1tezjAn\n55iVM8zJGebk3CXxtjwAAPhiIO4AAFiGuAMAYBniDgCAZYg7AACWIe4AAFiGuAMAYBniDgCAZYg7\nAACWIe4AAFiGuAMAYBniDgCAZYg7AACWIe4AAFiGuAMAYBniDgCAZYg7AACWIe4AAFiGuAMAYBni\nDgCAZYg7AACWIe4AAFiGuAMAYBniDgCAZYg7AACWIe4AAFiGuAMAYBniDgCAZYg7AACWIe4AAFiG\nuAMAYBniDgCAZYg7AACWIe4AAFgmZqQ3IEnr/nuj/tbuDx6PG3OZlvzgjhHcEQAAX1yXRNz/tveg\n/tH31eDx+E/+PoK7AQDgi4235QEAsAxxBwDAMsQdAADLEHcAACxD3AEAsExE4r5r1y7dfvvtWr58\nud55551IPAQAADiHiMQ9KipKY8eOVSAQ0KRJkyLxEAAA4Bwcxb2iokLp6ekqKCgIWW9ublZeXp5y\nc3NVV1cXXJ82bZrq6ur08MMP66mnngrvjgEAwHk5intRUZG8Xm/I2sDAgKqrq+X1elVfXy+fz6f2\n9vaQz4mLi1N/f3/4dgsAAD6XozvUpaWlqbOzM2SttbVVycnJSkpKkiR5PB41NjYqJSVFW7du1Y4d\nO9Tb26s77uA2sgAADKch337W7/crMTExeOxyudTW1iZJys7OVnZ29pA3FRsbo/j4uCF/ve2YjTPM\nyTlm5QxzcoY5jbxL4t7yZ+vvP6Xu7mMjvY1LUnx8HLNxgDk5x6ycYU7OMCfnIvlN0JCvlne5XOrq\n6goe+/1+JSQkhGVTAABg6BzH3RgTcpyamqqOjg51dnYqEAjI5/MpMzMz7BsEAAAXxtHb8uXl5Wpp\naVFPT48yMjJUVlam4uJiVVZWqrS0VMYYlZSUKCUlJdL7BQAAn8NR3GtqagZdd7vdcrvdYd0QAAC4\nONxbHgAAyxB3AAAsQ9wBALAMcQcAwDLEHQAAyxB3AAAsQ9wBALAMcQcAwDLEHQAAyxB3AAAsQ9wB\nALAMcQcAwDLEHQAAyxB3AAAsQ9wBALAMcQcAwDLEHQAAyxB3AAAsQ9wBALAMcQcAwDLEHQAAyxB3\nAAAsQ9wBALAMcQcAwDLEHQAAyxB3AAAsQ9wBALAMcQcAwDLEHQAAyxB3AAAsQ9wBALAMcQcAwDLE\nHQAAyxB3AAAsQ9wBALAMcQcAwDLEHQAAyxB3AAAsQ9wBALAMcQcAwDIRi/vx48dVXFyspqamSD0E\nAAAYRMTivm7dOs2dOzdSpwcAAOfgKO4VFRVKT09XQUFByHpzc7Py8vKUm5ururq64Pqf//xnXXvt\ntbrqqqtkjAnvjgEAwHk5intRUZG8Xm/I2sDAgKqrq+X1elVfXy+fz6f29nZJUktLi3bv3q36+nr9\n8Y9/DP+uAQDAOcU4+aS0tDR1dnaGrLW2tio5OVlJSUmSJI/Ho8bGRqWkpOihhx6SJG3ZskUTJkwI\n85YBAMD5OIr7YPx+vxITE4PHLpdLbW1tIZ9TWFg4pHPHxsYoPj5uqFuzHrNxhjk5x6ycYU7OMKeR\nN+S4R1J//yl1dx8b6W1ckuLj45iNA8zJOWblDHNyhjk5F8lvgoZ8tbzL5VJXV1fw2O/3KyEhISyb\nAgAAQ+c47mdf9Z6amqqOjg51dnYqEAjI5/MpMzMz7BsEAAAXxtHb8uXl5WppaVFPT48yMjJUVlam\n4uJiVVZWqrS0VMYYlZSUKCUlJdL7BQAAn8NR3GtqagZdd7vdcrvdYd0QAAC4ONxbHgAAyxB3AAAs\nQ9wBALAMcQcAwDLEHQAAyxB3AAAsQ9wBALAMcQcAwDLEHQAAyxB3AAAsQ9wBALAMcQcAwDLEHQAA\nyxB3AAAsQ9wBALAMcQcAwDLEHQAAyxB3AAAsQ9wBALAMcQcAwDLEHQAAyxB3AAAsQ9wBALAMcQcA\nwDLEHQAAyxB3AAAsQ9wBALAMcQcAwDLEHQAAyxB3AAAsQ9wBALAMcQcAwDLEHQAAyxB3AAAsQ9wB\nALAMcQcAwDLEHQAAyxB3AAAsQ9wBALAMcQcAwDIxkThpe3u7NmzYoCNHjmjGjBlatGhRJB4GAAAM\nIiKv3FNSUlRVVaUnn3xSb731ViQeAgAAnIOjuFdUVCg9PV0FBQUh683NzcrLy1Nubq7q6upCPrZt\n2zbde++98ng84dstAAD4XI7iXlRUJK/XG7I2MDCg6upqeb1e1dfXy+fzqb29PfjxOXPmaN26ddq0\naVN4dwwAAM7L0b+5p6WlqbOzM2SttbVVycnJSkpKkiR5PB41NjYqJSVFu3bt0uuvv65AIKCbb745\n/LsGAADnNOQL6vx+vxITE4PHLpdLbW1tkqTp06dr+vTpQ95UbGyM4uPjhvz1tmM2zjAn55iVM8zJ\nGeY08iJytfzF6u8/pe7uYyO9jUtSfHwcs3GAOTnHrJxhTs4wJ+ci+U3QkK+Wd7lc6urqCh77/X4l\nJCSEZVMAAGDoHMfdGBNynJqaqo6ODnV2dioQCMjn8ykzMzPsGwQAABfG0dvy5eXlamlpUU9PjzIy\nMlRWVqbi4mJVVlaqtLRUxhiVlJQoJSUl0vsFAACfw1Hca2pqBl13u91yu91h3RAAALg43FseAADL\nEHcAACxD3AEAsAxxBwDAMsQdAADLEHcAACxD3AEAsAxxBwDAMsQdAADLEHcAACxD3AEAsAxxBwDA\nMsQdAADLEHcAACxD3AEAsAxxBwDAMsQdAADLEHcAACxD3AEAsAxxBwDAMsQdAADLEHcAACxD3AEA\nsAxxBwDAMsQdAADLEHcAACxD3AEAsAxxBwDAMsQdAADLEHcAACxD3AEAsAxxBwDAMsQdAADLEHcA\nACxD3AEAsAxxBwDAMsQdAADLEHcAACxD3AEAsAxxBwDAMjGROnFDQ4OamprU19en4uJizZgxI1IP\nBQAAPiVicc/KylJWVpaOHj2qxx9/nLgDADBMHL8tX1FRofT0dBUUFISsNzc3Ky8vT7m5uaqrq/vM\n19XW1ur222+/+J0CAABHHMe9qKhIXq83ZG1gYEDV1dXyer2qr6+Xz+dTe3t78ONPPPGEZs2apSlT\npoRvxwAA4Lwcxz0tLU3jxo0LWWttbVVycrKSkpIUGxsrj8ejxsZGSdJzzz2nt99+W6+99ppeeOGF\n8O4aAACc00X9m7vf71diYmLw2OVyqa2tTZJ055136s477xzSeWNjYxQfH3cxW7Mas3GGOTnHrJxh\nTs4wp5EXsQvqLkZ//yl1dx8b6W1ckuLj45iNA8zJOWblDHNyhjk5F8lvgi7q59xdLpe6urqCx36/\nXwkJCRe9KQAAMHQXFHdjTMhxamqqOjo61NnZqUAgIJ/Pp8zMzLBuEAAAXBjHb8uXl5erpaVFPT09\nysjIUFlZmYqLi1VZWanS0lIZY1RSUqKUlJRI7hcAAHwOx3GvqakZdN3tdsvtdodtQwAA4OJwb3kA\nACxD3AEAsAxxBwDAMsQdAADLEHcAACxD3AEAsAxxBwDAMsQdAADLEHcAACxD3AEAsAxxBwDAMsQd\nAADLEHcAACxD3AEAsAxxBwDAMsQdAADLEHcAACxD3AEAsAxxBwDAMsQdAADLEHcAACxD3AEAsAxx\nBwDAMsQdAADLEHcAACxD3AEAsAxxBwDAMsQdAADLEHcAACxD3AEAsAxxBwDAMsQdAADLEHcAACxD\n3AEAsAxxBwDAMsQdAADLEHcAACxD3AEAsAxxBwDAMsQdAADLxETipPv27dMzzzyj3t5ePfXUU5F4\nCAAAcA4ReeX+ta99TStXrozEqQEAwOdwFPeKigqlp6eroKAgZL25uVl5eXnKzc1VXV1dRDYIAAAu\njKO4FxUVyev1hqwNDAyourpaXq9X9fX18vl8am9vD/kcY0z4dgoAABxxFPe0tDSNGzcuZK21tVXJ\nyclKSkpSbGysPB6PGhsbJUk9PT1avny5PvzwQ17RAwAwzIZ8QZ3f71diYmLw2OVyqa2tTZI0fvx4\nVVVVXfzuAADABYvI1fIXKzY2RvHxcSO9jUsWs3GGOTnHrJxhTs4wp5E35Li7XC51dXUFj/1+vxIS\nEsKyqZMnA9q58/2QtW9845uKjo4Oy/m/yOLj49TdfWykt3HJY07OMStnmJMzzMm5SH4T5DjuZ18c\nl5qaqo6ODnV2dio+Pl4+n09r1qwJy6Z6j/xLP179ksZ85cw3C/8+clBPPTJfKSn/FZbzAwBgM0dx\nLy8vV0tLi3p6epSRkaGysjIVFxersrJSpaWlMsaopKREKSkpYdvYmK8k6MoJSWE7HwAAXxaO4l5T\nUzPoutvtltvtDuuGAADAxeHe8gAAWIa4AwBgGeIOAIBliDsAAJYh7gAAWIa4AwBgGeIOAIBliDsA\nAJYh7gAAWIa4AwBgGeIOAIBliDsAAJYh7gAAWIa4AwBgGeIOAIBliDsAAJYh7gAAWIa4AwBgGeIO\nAIBliDsAAJYh7gAAWIa4AwBgGeIOAIBliDsAAJYh7gAAWIa4AwBgGeIOAIBliDsAAJYh7gAAWIa4\nAwBgGeIOAIBliDsAAJYh7gAAWIa4AwBgGeIOAIBliDsAAJYh7gAAWIa4AwBgGeIOAIBliDsAAJaJ\nicRJjx8/rqqqKo0aNUrTpk1TQUFBJB4GAAAMIiKv3F9//XXl5eVpxYoV2rZtWyQeAgAAnIOjuFdU\nVCg9Pf0zr8Cbm5uVl5en3Nxc1dXVBdf9fr8mTZp05gEu451/AACGk6PyFhUVyev1hqwNDAyourpa\nXq9X9fX18vl8am9vlyRNmjRJfr8//LsFAACfy1Hc09LSNG7cuJC11tZWJScnKykpSbGxsfJ4PGps\nbJQkZWdn69VXX1VVVZVmz54d/l0DAIBzGvIFdX6/X4mJicFjl8ultrY2SdLo0aP1i1/84uJ39x9m\nYEAdHf8bPD59+rSkKEVHXzbosSR94xvfVHR0dNj2cLbTp0/rf/7n45C1SD8mAGBoBvs7W7L37+2I\nXC1/odb8vx+dtbJgRPZxoSZNunFEHjc+Pm5EHveLhjk5x6ycYU7OXKpzGqm/s0fCkK92c7lc6urq\nCh77/X4lJCSEZVMAAGDoHMfdGBNynJqaqo6ODnV2dioQCMjn8ykzMzPsGwQAABcmypxd7UGUl5er\npaVFPT09mjhxosrKylRcXKympiatWrVKxhiVlJTo3nvvHY49AwCA83AUdwAA8MXBHWYAALAMcQcA\nwDIjHvdz3cL2y+LAgQP6/ve/L4/Ho4KCAm3YsEGSdOTIEZWWlio3N1c/+MEPdOzYseDXrF27Vjk5\nOcrPz9ebb74ZXP/rX/+qgoIC5ebmauXKlcP+XIbDwMCAFi5cqPvvv18SczqXY8eOaenSpcrPz5fH\n49Hu3buZ1SDWrl0b/LNXXl6uQCDAnP5jsNuOh3M2gUBADz30kHJycnTbbbeF/PTVF8lgc3r88ceV\nn5+vBQsWqKysTL29vcGPDduczAg6ffq0ycrKMvv37zeBQMDMnz/ffPTRRyO5pWF38OBBs2fPHmOM\nMb29vSYnJ8d89NFH5vHHHzd1dXXGGGPWrl1rVq9ebYwx5h//+IdZsGCB6e/vN/v27TNZWVlmYGDA\nGGNMSUmJ2b17tzHGmHvuucc0NzePwDOKrPXr15vy8nJz3333GWMMczqHxx57zGzcuNEYY0x/f785\nevQoszrL/v37zZw5c8zJkyeNMcb8+Mc/Nps2bWJO//HOO++YPXv2mHnz5gXXwjmb559/3ixfvtwY\nY4zP5zMPPvjgcD21sBpsTm+99ZY5ffq0McaY1atXmyeeeMIYM7xzGtFX7ue7he2XRXx8vKZMmSJJ\nGjt2rFJSUuT3+9XY2KiFCxdKkhYuXKiGhgZJ0rZt2zR37lzFxMToq1/9qpKTk9Xa2qru7m719fVp\n6tSpkqTCwsLg19jiwIEDampq0qJFi4JrzOmzent79e6776q4uFiSFBMTo7i4OGZ1liuvvFKxsbE6\nfvy4Tp06pRMnTsjlcjGn/xjstuPhnM2nz5Wbm6u33357uJ5aWA02p/T09OB/mvbtb39bBw4ckDS8\ncxrRuA92C9uDBw+O4I5G1v79+/Xhhx/qW9/6lv71r39p4sSJks58A3D48GFJg8/M7/eH/E98n163\nyapVq/Too48qKioquMacPmv//v2aMGGCfvrTn2rhwoX62c9+puPHjzOrs3zlK19RaWmpMjIyNGvW\nLMXFxSk9PZ05ncfhw4fDNpuDBw8GPxYdHa1x48app6dnuJ7KsNm4caPcbrek4Z3TiP+bO87o6+vT\n0qVLVVFRobFjx4YETNJnjr9stm/frokTJ2rKlCmfuaHSp33Z5yRJp06d0p49e/S9731Pmzdv1ujR\no1VXV8fvqbPs27dPzz77rN544w3t2LFDx48f10svvcScLkA4Z3O+P9dfVLW1tYqNjdW8efPCdk6n\ncxrRuHML2zNOnTqlpUuXasGCBcrKypIkXX311Tp06JAkqbu7W1dddZWkMzP75z//GfzaAwcOyOVy\nfWbd7/fL5XIN47OIrPfff1/btm1TZmZm8KZKjzzyiCZOnMiczjJp0iRNmjRJqampkqScnBzt2bOH\n31NnaWtr04033qjx48crOjpaWVlZ+uCDD5jTeYRzNgkJCcG3q0+fPq3e3l6NHz9+uJ5KxG3atElN\nTU2qqakJrg3nnEY07tzC9oyKigpde+21Wrx4cXBtzpw52rRpkyRp8+bNwbnMmTNHr7zyigKBgPbt\n26eOjg5NnTpV8fHxiouLU2trq4wx2rJli1WzXLZsmbZv367GxkatWbNGN998s1avXq3Zs2czp7NM\nnDhRiYmJ2rt3ryRp586duvbaa/k9dZZvfvOb2r17t06ePCljDHMaxNmvEsM5mzlz5mjz5s2SpFdf\nfVW33HLLMD6z8Dp7Ts3NzfJ6vaqtrdWoUaOC68M6pyFfIhgmTU1NJicnx2RnZ5u1a9eO9HaG3bvv\nvmsmT55s5s+fbxYsWGAKCwtNU1OT+eSTT8zixYtNTk6Oufvuu82RI0eCX/PMM8+YrKwsk5eXZ3bs\n2BFcb2trM/PmzTPZ2dmmurp6JJ7OsGhpaQleLc+cBve3v/3NFBUVmfnz55slS5aYo0ePMqtBrFu3\nzsydO9fMmzfPPProoyYQCDCn/1i2bJmZMWOGuf76643b7TYbN240PT09YZvNyZMnzdKlS012drZZ\ntGiR2bdv37A+v3AZbE7Z2dkmIyPDFBYWmsLCwuDV7sYM35y4/SwAAJbhgjoAACxD3AEAsAxxBwDA\nMsQdAADLEHcAACxD3AEAsAxxBwDAMsQdAADL/H+lQuRou1+7qAAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7f7d59ec5110>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
-   "source": []
+   "source": [
+    "df.hist('Conversions',bins=100,log=True)"
+   ]
   },
   {
    "cell_type": "code",
