--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -290,6 +290,8 @@
     }
    ],
    "source": [
+    "def \n",
+    "\n",
     "df.groupby(lambda x: 'No AllConversions' if x['AllConversions'] > 0 else 'Has AllConversions',axis=1)"
    ]
   },
