--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -290,9 +290,13 @@
     }
    ],
    "source": [
-    "def \n",
+    "def hasAllConversions(x):\n",
+    "  if x['AllConversions'] > 0:\n",
+    "    return 'Has AllConversions'\n",
+    "  else:\n",
+    "    \n",
     "\n",
-    "df.groupby(lambda x: 'No AllConversions' if x['AllConversions'] > 0 else 'Has AllConversions',axis=1)"
+    "df.groupby(lambda x: 'No AllConversions' if x['AllConversions'] > 0 else ,axis=1)"
    ]
   },
   {
